# ScalaJVMInitializer

./: pyproject.toml
ScalaJVMInitializer/: __init__.py
