[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ScalaJVMInitializer"
authors = [{name = "KOLANICH"}]
description = "A library complementing JAbs for doing some useful things with Scala."
keywords = ["java", "JVM", "GraalVM", "GraalPython", "Scala"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dependencies = ["JAbs @ git+https://github.com/KOLANICH/JAbs.py.git"]
dynamic = ["version"]

[project.readme]
file = "ReadMe.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://gitlab.com/KOLANICH/ScalaJVMInitializer.py"

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
